fix name on mobile

--- a/index.css
+++ b/index.css
@@ -74,7 +74,7 @@ h1, h2, h3, p {
 
 #intro h1 {
     font-family: Open Sans;
-    font-size: 7rem;
+    font-size: 5rem;
     margin-bottom: 7vh;
 }
 
@@ -184,5 +184,11 @@ footer p {
     #intro img {
         height: 35%;
         margin-top: 15vh
+    }
+}
+
+@media (min-height: 512px) {
+    #intro h1 {
+        font-size: 7rem;
     }
 }
